add count user api
