# app/routers/usersRoute.js
@@ -3,6 +3,7 @@ const usersController = require('../controllers/usersController');
 const router = express.Router();
 
 router.get('/', usersController.getAllUsers)
+router.get('/count', usersController.getAllUsersCount)
 router.get('/:id', usersController.getUserById)
 router.post('/', usersController.createUser)
 router.delete('/', usersController.deleteUser)
